Added mariadb connection string

--- a/PokerOnline/appsettings.json
+++ b/PokerOnline/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": ""
+    "Default": "Server=172.17.0.2;Database=Poker;Uid=root;Pwd=toor"
   }
 }
